--- a/src/components/ImputWithButton/styles.module.css
+++ b/src/components/ImputWithButton/styles.module.css
@@ -1,5 +1,9 @@
 .wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    background-color: rgb(252, 249, 249);
+    padding: 20px;
 }
 
 .border {
@@ -7,20 +11,17 @@
     border-radius: 30px;
     display: flex;
     padding: 5px 7px;
-
 }
 
-
-
 .input {
+    display: block;
     border: none;
     outline: none;
     height: 30px;
     font-size: 20px;
-    width: 400px;
+    width: 100%;
+    background-color: rgb(252, 249, 249);
 }
-
-
 
 .button {
     color: white;
