--- a/src/components/ToDo/styles.module.css
+++ b/src/components/ToDo/styles.module.css
@@ -1,8 +1,8 @@
 .wrapper {
     border: 1px solid #6d6b6b;
     border-radius: 5px;
-    margin: 10px 20px;
     padding: 10px;
+    margin-bottom: 10px;
     display: flex;
 }
 
