change ToDo styles

--- a/src/components/ToDo/styles.module.css
+++ b/src/components/ToDo/styles.module.css
@@ -17,4 +17,10 @@
     margin-right: 5px;
 }
 
-.text {}
+.isDone {
+    text-decoration: line-through;
+}
+
+.notDone {
+    text-decoration: none;
+}
