--- a/src/components/ToDoList/Task/styles.module.css
+++ b/src/components/ToDoList/Task/styles.module.css
@@ -10,30 +10,21 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: #19e23b url(./images/agree.png) center no-repeat;
-  background-size: cover;
   cursor: pointer;
   margin-left: 5px;
   margin-right: 5px;
 }
 
+.completeButton {
+  background: #19e23b url(./images/agree.png) center no-repeat;
+  background-size: cover;
+}
 .deleteButton {
-  color: white;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
   background: #19e23b url(./images/remove.png) center no-repeat;
   background-size: cover;
-  cursor: pointer;
-  margin-left: 5px;
-  margin-right: 5px;
   margin-left: auto;
 }
 
 .completed {
   text-decoration: line-through;
-}
-
-.notCompleted {
-  text-decoration: none;
 }
