--- a/src/components/ToDoList/Task/styles.module.css
+++ b/src/components/ToDoList/Task/styles.module.css
@@ -3,16 +3,21 @@
   border-radius: 5px;
   padding: 10px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .button {
-  color: white;
   height: 20px;
   width: 20px;
+  padding: 10px;
   border-radius: 50%;
   cursor: pointer;
-  margin-left: 5px;
-  margin-right: 5px;
+}
+
+.text {
+  flex-grow: 1;
+  padding: 0 10px 0 10px;
 }
 
 .completeButton {
@@ -22,7 +27,6 @@
 .deleteButton {
   background: #19e23b url(./images/remove.png) center no-repeat;
   background-size: cover;
-  margin-left: auto;
 }
 
 .completed {
